# TodoAppFastAPI

./: pyproject.toml
todo/: database.py  main.py
