[tool.poetry]
name = "my-package"
version = "0.1.0"
description = ""
authors = ["smmartprogrammer <partabrajp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pendulum = "^3.0.0"
fastapi = "^0.110.0"
sqlmodel = "^0.0.16"
uvicorn = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
